# Semantic-Search-OpenAI-Chromadb

./: README.md  pyproject.toml
notebooks/: Semantic-Searching.ipynb
