[tool.poetry]
name = "semantic-search-openai"
version = "0.1.0"
description = "\"Semantic Searching using Open AI API\""
authors = ["brenoAV"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
chromadb = "^0.4.22"
pandas = "^2.2.0"
datasets = "^2.17.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
